fix experiences overflow

--- a/src/component/static/experience.css
+++ b/src/component/static/experience.css
@@ -2,6 +2,7 @@
   padding: 50px 15px;
   border-bottom: 1px solid var(--border);
   text-align: center;
+  overflow-x: hidden;
 }
 
 #experience h2 {
